<resources>
    <string name="app_name">Desafio Android Mobills</string>
    <string name="btnLogin">Login com google</string>
    <string name="lbl_logo">Bem vindo ao \nGerenciador Financeiro</string>
    <string name="txt_dev">Desenvolvido por: Jordi Lucas</string>
    <string name="error_google_signin">Erro ao fazer login</string>
    <string name="add_receita">Receita</string>
    <string name="home">Home</string>
    <string name="despesa">Despesa</string>
    <string name="minha_conta">Minha conta</string>
    <string name="hint_descricao">Descricao da despesa</string>
    <string name="hint_valor">Valor da despesa</string>
    <string name="hint_date">Data da receita</string>
    <string name="btn_salvar">Salvar</string>
    <string name="receita_salvo">Receita salva com sucesso</string>
    <string name="receita_error">Erro ao cadastrar receita</string>
</resources>