<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_nav"
        android:enabled="true"
        android:icon="@drawable/baseline_home_black_36"
        android:title="@string/home"
        />

    <item
        android:id="@+id/receita_nav"
        android:enabled="true"
        android:icon="@drawable/baseline_attach_money_black_36"
        android:title="@string/add_receita"
        />

    <item
        android:id="@+id/despesa_nav"
        android:enabled="true"
        android:icon="@drawable/baseline_remove_black_36"
        android:title="@string/despesa"
        />

    <item
        android:id="@+id/conta_nav"
        android:enabled="true"
        android:icon="@drawable/baseline_person_black_36"
        android:title="@string/minha_conta"
        />


</menu>