<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_default"
    tools:context=".SigninActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextView"
        android:text="@string/lbl_logo"
        android:textSize="@dimen/lbl_logo_size"
        android:textColor="@android:color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        style="@style/Widget.DesafioAndroidMobills.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/txt_dev"
        android:gravity="center"
        android:textSize="@dimen/lbl_dev_size"
        android:textColor="@android:color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>